--- a/include/menu.html
+++ b/include/menu.html
@@ -18,7 +18,7 @@
             <li class="menu-list"><a href="#"><i class="lnr lnr-user"></i>  <span>Gerenciar Cliente</span></a>
                 <ul class="sub-menu-list">
                     <li><a href="cliente.php">Cliente</a> </li>
-                    <li><a href="estadocivil.php">Estado Civil</a> </li>
+                    <li><a href="tipocontato.php">Tipo Contato</a> </li>
                 </ul>
             </li>
 
