--- a/include/menu.html
+++ b/include/menu.html
@@ -22,10 +22,10 @@
                 </ul>
             </li>
 
-            <li><a href="parceiro.php"><i class="lnr lnr-spell-check"></i> <span>Parceiros</span></a></li>
+          <!--  <li><a href="parceiro.php"><i class="lnr lnr-spell-check"></i> <span>Parceiros</span></a></li>
 
 
-            <li><a href="plano.php"><i class="lnr lnr-select"></i> <span>Planos</span></a></li>
+            <li><a href="plano.php"><i class="lnr lnr-select"></i> <span>Planos</span></a></li>  -->
             <li class="menu-list"><a href="#"><i class="lnr lnr-apartment"></i>  <span>Funcion&aacute;rio</span></a>
                 <ul class="sub-menu-list">
                     <li><a href="cargo.php">Cargo</a> </li>
@@ -43,6 +43,7 @@
                     <li><a href="endereco.php">Gerenciar Endere&ccedil;o</a></li>
                 </ul>
             </li>
+            <!--
             <li><a href="pagamento.php"><i class="lnr lnr-cart"></i> <span>Pesquisa D&iacute;vida</span></a></li>
             <li><a href="conta.php"><i class="lnr lnr-envelope"></i> <span>Informa&ccedil;&otilde;es Boleto</span></a></li>
             <li class="menu-list"><a href="#"><i class="lnr lnr-database"></i>  <span>Relat&oacute;rios</span></a>
@@ -51,6 +52,7 @@
                     <li><a href="emdia.php">Em dia</a> </li>
                 </ul>
             </li>
+            -->
             <li><a href="sair.php" ><i class="lnr lnr-power-switch"></i><span>Sair</span></a></li>
         </ul>
 
