--- a/include/menu.html
+++ b/include/menu.html
@@ -2,7 +2,7 @@
 
     <!--logo and iconic logo start-->
     <div class="logo">
-        <h1><a href="cliente.php">SSG</a></h1>
+        <h1><a href="cliente.php">SGG</a></h1>
     </div>
     <div class="logo-icon text-center">
         <a href="cliente.php"><i class="lnr lnr-home"></i> </a>
