--- a/include/menu.html
+++ b/include/menu.html
@@ -15,9 +15,10 @@
         <ul class="nav nav-pills nav-stacked custom-nav">
 
 
-            <li class="menu-list"><a href="#"><i class="lnr lnr-user"></i>  <span>Gerenciar Cliente</span></a>
+            <li class="menu-list"><a href="#"><i class="lnr lnr-pencil"></i>  <span>Gerenciar Cadastro</span></a>
                 <ul class="sub-menu-list">
                     <li><a href="cliente.php">Cliente</a> </li>
+                    <li><a href="fornecedor.php">Fornecedor</a> </li>
                     <li><a href="tipocontato.php">Tipo Contato</a> </li>
                 </ul>
             </li>
